--- a/canvas.html
+++ b/canvas.html
@@ -4,33 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas Drawing with Shapes</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
       canvas {
         border: 1px solid #000;
+        margin-top: 20px;
+      }
+      .container {
+        margin-top: 30px;
+      }
+      .form-group {
+        margin-bottom: 15px;
       }
     </style>
   </head>
   <body>
-    <label for="brushSize">Brush Size:</label>
-    <select id="brushSize">
-      <option value="2">2</option>
-      <option value="5" selected>5</option>
-      <option value="10">10</option>
-      <option value="20">20</option>
-    </select>
+    <div class="container">
+      <div class="form-group">
+        <label for="brushSize">Brush Size:</label>
+        <select class="form-select" id="brushSize">
+          <option value="2">2</option>
+          <option value="5" selected>5</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+        </select>
+      </div>
 
-    <label for="brushColor">Brush Color:</label>
-    <input type="color" id="brushColor" value="#000000" />
+      <div class="form-group">
+        <label for="brushColor">Brush Color:</label>
+        <input
+          type="color"
+          class="form-control"
+          id="brushColor"
+          value="#000000"
+        />
+      </div>
 
-    <label for="shape">Shape:</label>
-    <select id="shape">
-      <option value="freehand" selected>Freehand</option>
-      <option value="circle">Circle</option>
-      <option value="square">Square</option>
-      <option value="arrow">Arrow</option>
-    </select>
+      <div class="form-group">
+        <label for="shape">Shape:</label>
+        <select class="form-select" id="shape">
+          <option value="freehand" selected>Freehand</option>
+          <option value="circle">Circle</option>
+          <option value="square">Square</option>
+          <option value="arrow">Arrow</option>
+        </select>
+      </div>
 
-    <canvas id="myCanvas" width="400" height="400"></canvas>
+      <canvas id="myCanvas" width="400" height="400"></canvas>
+    </div>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
       var canvas = document.getElementById("myCanvas");
