Added clear button

--- a/canvas.html
+++ b/canvas.html
@@ -54,6 +54,10 @@
         </select>
       </div>
 
+      <button class="btn btn-primary d-block" onclick="clearCanvas()">
+        Clear
+      </button>
+
       <canvas id="myCanvas" width="400" height="400"></canvas>
     </div>
 
@@ -167,6 +171,10 @@
         ctx.closePath();
         ctx.stroke();
         ctx.fill();
+      }
+
+      function clearCanvas() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
       }
     </script>
   </body>
