Clear canvas issue fixed

--- a/index.html
+++ b/index.html
@@ -201,10 +201,8 @@
 
       /**
        * Clears the canvas.
-       * @param {object} ctx - The canvas rendering context.
-       * @param {object} canvas - The canvas element.
        */
-      function clearCanvas(ctx, canvas) {
+      function clearCanvas() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
       }
     </script>
